# open-agent-teams

./: .gitignore  .gitleaks.toml  .golangci.yml  .goreleaser.yaml  .goreleaser.yml  AGENT-FACTORY-SPEC.md  AGENTS.md  AGENT_BLUEPRINTS_SETUP.md  ARCHITECTURE.md  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  PLANNER-COMPLETE-SUMMARY.md  PLANNER-MODEL-FIX.md  README.md  RELEASING.md  SECURITY.md  agent-factory-architecture.md  go.mod  go.sum  install.sh  overlord-planner-integration.md  planner-code-analysis.md  planner-documentation.md  planner-e2e-test-results.md  planner-enhancements-summary.md  planner-integration-plan.md  planner-test-scenarios.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
agent-runtime/services/agent-builder/: pyproject.toml  run.py
agent-runtime/services/agent-builder/agent-builder/: agent-generator.yaml  intent-analyzer.yaml  main.yaml  orchestrator.yaml
agent-runtime/services/agent-builder/agent-builder/skills/agent-builder-orchestration/: SKILL.md
agent-runtime/services/agent-builder/agent-builder/skills/agent-generator/agent-generation/: SKILL.md
agent-runtime/services/agent-builder/agent-builder/skills/intent-analyzer/intent-analysis/: SKILL.md
agent-runtime/services/agent-builder/agent-builder/skills/reference/: agent-config.md  backends.md  skill-format.md  tools-and-mcp.md
agent-runtime/services/agent-builder/libs/: deep_loom_kit-0.3.2-py3-none-any.whl
benchmarks/robotic-barista/: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/robotic-barista/.github/workflows/: ci.yml
benchmarks/robotic-barista/docs/: operational-specification.md  testing-strategy.md
benchmarks/robotic-barista/docs/plans/: 2026-01-28-robotic-barista-design.md
benchmarks/robotic-barista/scripts/: blackbox-test.sh  check.sh
benchmarks/robotic-barista/scripts/blackbox-tests/: helpers.sh
benchmarks/robotic-barista/specs/: constitution.md  plan.md  specify.md  tasks.md
benchmarks/robotic-barista/tests/: __init__.py  conftest.py
benchmarks/robotic-barista/tests/unit/: test_placeholder.py
benchmarks/routing-test-repo/seed/: AGENTS.md  README.md  pyproject.toml
benchmarks/routing-test-repo/seed/docs/: spec.md
benchmarks/routing-test-repo/seed/src/budget_cli/: __init__.py  cli.py  models.py  storage.py
benchmarks/routing-test-repo/seed/tests/: conftest.py  test_cli.py
(+596 files in other folders)
